--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,6 @@ body {
   font-family: sans-serif;
 }
 
-#root {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 input {
   height: 20px;
   border-radius: 16px;
@@ -26,26 +21,37 @@ button:hover {
   color: #fff;
   cursor: pointer;
 }
+.todo_block {
+  display: flex;
+  flex-wrap: wrap;
+}
+.text_content {
+  word-break: break-all;
+}
+.text_deadline {
+  word-break: keep-all;
+  min-width: 100px;
+}
 
-.imcomplete-area {
+.imcomplete_area {
   background-color: #c6ffe2;
-  width: 400px;
+  min-width: 400px;
   min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
 }
 
-.complete-area {
+.complete_area {
   background-color: #ffffe0;
-  width: 400px;
+  min-width: 400px;
   min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
 }
 
-.edit-area {
+.edit_area {
   background-color: pink;
   width: 300px;
   min-height: 200px;
@@ -61,7 +67,7 @@ button:hover {
   color: #666;
 }
 
-.list-row {
+.list_row {
   display: flex;
   align-items: center;
   padding-bottom: 4px;
