フィードバック対応

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,14 @@ button:hover {
   word-break: keep-all;
   min-width: 100px;
 }
+.input_area {
+  background-color: #c1ffff;
+  width: 400px;
+  height: 30px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+}
 
 .imcomplete_area {
   background-color: #c6ffe2;
